--- a/css/index.css
+++ b/css/index.css
@@ -154,12 +154,14 @@ video {
 }
 
 #logo {
-    position: absolute;
-    display: inline;
-    left: 0px;
-    top: 0px;
-    margin: 1em;
+	display: inline;
+	margin: 1em;
+	left: 0px;
+	position: absolute;
+	top: 0px;
+	z-index: 1;
 }
+#logo img { height: 100%;}
 
 #room-name {
     display: inline;
@@ -259,3 +261,264 @@ video {
 #notSurpportBrowser img {
 	width: 100%;
 }
+
+
+
+
+/****** index css ******/
+#room-id[disabled] , #userName[disabled] {
+	background-color: white;
+}
+/****** index css ******/
+
+
+
+/****** room css ******/
+#joinRoom { overflow: hidden; }
+
+/* menu start */
+#share-file {
+	position: absolute !important;
+	right: 1.5rem;
+	top: 1rem;
+}
+
+#menuDiv {
+	padding: 1rem;
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+/* menu end */
+
+/* video start */
+#videos-container { 
+	height: 100%; 
+	position: relative;
+}
+.media-container { 
+	bottom: 0;
+	position: relative;
+	width: 50%; 
+	/* position: absolute; */ 
+}
+.media-container .media-box video {
+	height: 100%;
+	object-fit: cover; 
+}
+.media-controls { display: none; }
+.media-box { height: 100%; }
+/* video end */
+
+/* chat start */
+/* chat new message count */
+.msgCntDiv {
+	background-color: red;
+	border: 2px solid white;
+	border-radius: 50%;
+	height: 25px;
+	right: -5px;
+	position: absolute;
+	top: -5px;
+	width: 25px;
+}
+.msgCntDiv > span {
+	font-size: 1rem;
+	font-weight: bold;
+	height: 100%;
+	left: 0;
+	position: absolute;
+	top: -3px;
+	width: 100%;
+}
+
+#chat-container {
+	background-color: #f2f2f2;
+	display: inline-block;
+	min-width: 320px;
+	overflow: hidden;
+	position: absolute;
+	top: 0;
+	width: 25%;
+}
+.chat-output {
+	background-color: rgb(244, 247, 253);
+	height: calc(60% - 40px);
+	list-style-type: none;
+	margin-left: 0;
+	overflow-y: scroll;
+	padding: 10px;
+}
+#file-container {
+	background-color: rgb(244, 247, 253);
+	border-bottom: 1px solid #13AFA5;
+	height: 40%;
+	list-style-type: none;
+	margin-left: 0;
+	overflow-y: scroll;
+	padding: 10px 5.5rem 10px 10px;
+}
+.textInputDiv {
+	bottom: 0;
+	position: absolute;
+	width: 100%;
+}
+#input-text-chat {
+	border: 0;
+	border-top: 1px solid #ddd;
+	height: 40px;
+	padding: 0 10px;
+	width: calc(100% - 60px);
+}
+#messageSendBtn {
+	background-color: #13AFA5;
+	border: 0;
+	border-radius: 0;
+	color: white;
+	cursor: pointer;
+	float: right;
+	font-weight: bold;
+	font-size: 0.8em;
+	height: 40px;
+	width: 60px;
+}
+.meMsgDiv {
+	margin-bottom: 10px;
+	text-align: right;
+}
+.timeSpan {
+	display: inline-table;
+	font-size: 0.8em;
+	margin: 0 5px;
+	vertical-align: bottom;
+}
+.userTextDiv {
+	font-size: 0.8em;
+	font-weight: bold;
+}
+.messageBox {
+	box-shadow: 2px 2px 4px #aaa;
+	display: inline-block;
+	font-size: 0.9em;
+	font-weight: normal;
+	max-width: 75%;
+	padding: 5px 10px;
+	word-break:break-all;
+}
+.meMsgDiv .messageBox {
+	background-color: #13AFA5;
+	border: 2px solid #13AFA5;
+	border-radius: 0.5rem 0.5rem 0 0.5rem;
+    box-shadow: 2px 2px 4px #aaa;
+	color: white;
+    display: inline-block;
+	font-size: 0.9em;
+    font-weight: normal;
+    max-width: 75%;
+    padding: 5px 10px;
+	text-align: left;
+}
+
+.meMsgDiv .receMsgDiv {
+	background-color: #13AFA5;
+	border: 2px solid #13AFA5;
+	border-radius: 0.5rem 0.5rem 0 0.5rem;
+    box-shadow: 2px 2px 4px #aaa;
+	color: white;
+    display: inline-block;
+	font-size: 0.9em;
+    font-weight: normal;
+    max-width: 75%;
+    padding: 5px 10px;
+	text-align: left;
+}
+
+.receMsgDiv { margin-bottom: 15px; }
+.receMsgDiv .iconBox {
+	display: inline-block;
+	text-align: center;
+	vertical-align: top;
+}
+.md-account-circle:before { font-size: 3.5rem; }
+.receMsgDiv .messageBox {
+	background-color: white;
+	border: 2px solid white;
+	border-radius: 0 0.5rem 0.5rem 0.5rem;
+	color: #37464D;
+}
+
+.messageDiv { 
+	display: inline-block;
+	max-width: 80%; 
+}
+
+.newUserMessageDiv {
+	font-weight:  bold;
+	margin:  0;
+	padding: .5rem;
+	text-align:  center;
+}
+/* chat end */
+
+
+/* 알람창 start */
+#mask {
+	background-color: black;
+	height: 100%;
+	left: 0;
+	position: absolute;
+	text-align: center;
+	top: 0;
+	width: 100%;
+	z-index: 1;
+}
+
+#inviteAlert { 
+	position: absolute;
+	z-index: 10; 
+}
+.alertDiv {
+	background-color: white;
+	border-radius: 0.2em;
+	display: none;
+	font-size: 0.9em;
+	margin: auto;
+	overflow: hidden;
+	text-align: center;
+	top: 100px;
+	left: 100px;
+}
+.alertTitle { 
+	color: white;
+	font-weight: bold;
+	text-align: left;
+	background-color: #343a40;
+	padding: 10px;
+}
+.alertContent { 
+	margin-top: 1em;
+	padding: 0 15px;
+}
+.alertAlarm {
+	font-size: 0.8em;
+	text-align: left;
+	margin-bottom: 10px;
+	padding: 10px 15px;
+	border: 1px solid #ddd;
+}
+.alertTableDiv {
+	border-top: 2px solid #13AFA5;
+	border-bottom: 2px solid #13AFA5;
+	font-weight: bold;
+	padding: 2rem;
+}
+.alertBtnDiv { margin: 1em 0; }
+.alertBtnDiv .btn { 
+	color: white;
+	font-size: 0.85rem; 
+	font-weight: bold;
+	width: 8em; 
+}
+#text_c_enter { background-color: #13AFA5; }
+#inviteAlertNoBtn { background-color: #c4bdb3; }
+/* 알람창 end */
