--- a/views/index.html
+++ b/views/index.html
@@ -22,9 +22,9 @@
 	<link type="text/css" rel="stylesheet" href="/css/lumx.css">
 	
 	<!-- Custom CSS styles -->
-	<link type="text/css" rel="stylesheet" href="/css/index.css" />
 	<link type="text/css" rel="stylesheet" href="/css/googleapis-fonts.css">
 	
+	<link type="text/css" rel="stylesheet" href="/css/index.css" />
 	<link type="text/css" rel="stylesheet" href="/css/reset.css" />
 	
 	<!-- Bootstrap -->
@@ -43,10 +43,10 @@
 	<link rel="stylesheet" href="/dev/getHTMLMediaElement.css">
 	<script src="/dev/getHTMLMediaElement.js"></script>
 	<script src="/dev/FileBufferReader.js"></script>
-	
-	
 </head>
 <body>
+	
+	<!-- main page start -->
 	<div id="createRoom">
 		<div style="padding: 30px;">
 		    <div class="contentBody row">
@@ -85,35 +85,13 @@
 					
 					<div class="box4">
 						<lx-text-field label="Username">
-						    <input type="text" id="name" name="name" required placeholder="대화명을  입력하세요." autocomplete="off">
+						    <input type="text" id="userName" name="userName" required placeholder="대화명을  입력하세요." autocomplete="off">
 						</lx-text-field>
 					</div>
 					
 					<div class="row joinBtn">
 						<!-- <button type="submit" id="createRoomBtn" class="btn btn-primary btn-block">Join room!</button> -->
 						<button id="open-or-join-room" class="btn btn-primary btn-block">Join room!</button>
-					</div>
-					
-					<div id="notSurpportBrowser" class="row">
-						<p class="col-md-12">사파리 브라우저는 지원하지 않습니다.</p>
-						
-						<!-- 크롬 -->
-						<div id="chromeDownDiv" class="col-md-4">
-							<img alt="chrome" src="/img/Chrome-logo.png">
-							<a href="https://www.google.co.kr/chrome/index.html" target="_blank">다운로드</a>
-						</div>
-						
-						<!-- 오페라 -->
-						<div id="operaDownDiv" class="col-md-4">
-							<img alt="chrome" src="/img/opera-logo.png">
-							<a href="https://www.opera.com/ko" target="_blank">다운로드</a>
-						</div>
-						
-						<!-- 파이어폭스 -->
-						<div id="firefoxDownDiv" class="col-md-4">
-							<img alt="chrome" src="/img/firefox-logo.png">
-							<a href="https://www.mozilla.org/ko/firefox/new/" target="_blank">다운로드</a>
-						</div>
 					</div>
 				</div>
 		    </div>
@@ -157,7 +135,7 @@
 					<p><span>고객센터</span><br>
 					Tel : 02-2039-3977<br>
 					Fax : 02-2039-3978<br>
-					E-mail : wincover@invesume.com</p>
+					E-mail : lukehan1128@invesume.com</p>
 				</div>
 			</div>
 			
@@ -165,25 +143,101 @@
 		</footer>
 		<!-- footer content -->
 	</div>
+	<!-- main page end -->
 	
 	
 	
-	<section class="make-center">
-		<input type="text" id="input-text-chat" placeholder="Enter Text Chat" disabled>
-		<button id="share-file" disabled>Share File</button>
-		<br><br>
-		<button id="btn-leave-room" disabled>Leave /or close the room</button>
+	<!-- room page start -->
+	<div id="joinRoom" style="display: none;">
+		<!-- 로고 -->
+		<div id="logo">
+			<img src="/img/logo.png">
+		</div>
+		
+		<!-- 영상 -->
+		<div id="videos-container">
+			<!-- 메뉴 -->
+			<div id="menuDiv">
+				
+				<!-- 종료 -->
+				<button class="btn btn--xl btn--red btn--fab mdi md-call-end" id="btn-leave-room" title="종료" style="position: relative; overflow: hidden; font-size: 1.9rem;">
+					<span class="ripple" style="height: 56px; width: 56px; top: 2px; left: 18.125px;"></span>
+				</button>
+				
+				<!-- 초대 -->
+				<button class="btn btn--xl btn--brown btn--fab mdi md-quick-contacts-dialer" id="invite" title="초대" style="position: relative; overflow: hidden; font-size: 1.9rem;">
+					<span class="ripple" style="height: 56px; width: 56px; top: 13px; left: 13px;"></span>
+				</button>
+				
+				<!-- 채팅 open/close -->
+				<button class="btn btn--xl btn--blue btn--fab mdi md-chat chatBtn" title="채팅" style="position: relative; font-size: 1.9rem;">
+					<div class="msgCntDiv" style="display: none;">
+						<span>0</span>
+					</div>
+					<span class="ripple" style="height: 56px; width: 56px; top: 6px; left: -14.625px;"></span>
+				</button>
+				
+			</div>
+		</div>
+		
 		
 		<div id="room-urls" style="text-align: center;display: none;background: #F1EDED;margin: 15px -10px;border: 1px solid rgb(189, 189, 189);border-left: 0;border-right: 0;"></div>
 		
-		<div id="chat-container">
+		<!-- 채팅 -->
+		<div id="chat-container" data-value="false">
+			
+			<!-- 파일공유 -->
+			<button class="btn btn--xl btn--orange btn--fab mdi md-file-upload" id="share-file" title="종료" style="position: relative; overflow: hidden; font-size: 1.9rem;">
+				<span class="ripple" style="height: 56px; width: 56px; top: 2px; left: 18.125px;"></span>
+			</button>
+			
+			<!-- 파일 -->
 		    <div id="file-container"></div>
-		    <div class="chat-output"></div>
+		    
+		    
+		    <!-- 채팅내용 -->
+		    <ul class="chat-output"></ul>
+		    
+		    <!-- 전송 -->
+			<div class="textInputDiv">
+				<input type="text" id="input-text-chat" disabled autocomplete="off">
+				<button class="btn btn--xl btn--red btn--fab mdi md-send " id="messageSendBtn" title="전송" style="position: relative; overflow: hidden; font-size: 1.9rem;">
+					<span class="ripple" style="height: 56px; width: 56px; top: 2px; left: 18.125px;"></span>
+				</button>
+			</div>
+			
 		</div>
-		<div id="videos-container"></div>
-	</section>
+		
+	</div>
+	
+	<!-- 초대 -->
+	<div id="mask" style="display: none; opacity: .7; z-index: 5;">
+		<!-- <img alt="Loading" src="/img/spinner.gif"> -->
+	</div>
+	
+	<div id="inviteAlert" class="alertDiv" data-value="false">
+		<div class="alertTitle">사용자 초대</div>
+		
+		<div class="alertContent">
+			<div class="alertAlarm">▷  링크 복사로 초대를 하실 수 있습니다.</div>
+			<div class="alertTableDiv">
+				<a href="javascript:;" class="clipboardBtn">
+					<span id="inviteUrl"></span>
+				</a>
+				<input id="clip_target" type="text" value="" style="position:absolute;top:-9999em;"/>
+			</div>
+		</div>
+		
+		<div class="alertBtnDiv">
+			<a href="javascript:;" id="text_c_enter" class="btn">링크복사</a>
+			<span>&nbsp;</span>
+			<input type="button" id="inviteAlertNoBtn" class="btn" value="닫기">
+		</div>
+	</div>
+	<!-- room page end -->
 
 	<script type="text/javascript" src="/js/index.js"></script>
+	<script type="text/javascript" src="/js/index_room_view.js"></script>
 	<script src="https://cdn.webrtc-experiment.com/common.js"></script>
 </body>
 </html>
