Update UX/UI 및 https 포워딩
- File Share 기능을 보이지 않도록 변경(UX/UI 적용 후 공개할 예정)
- http 접속시 https 로 포워딩 하도록 적용

--- a/views/index.html
+++ b/views/index.html
@@ -135,7 +135,7 @@
 					<p><span>고객센터</span><br>
 					Tel : 02-2039-3977<br>
 					Fax : 02-2039-3978<br>
-					E-mail : lukehan1128@invesume.com</p>
+					E-mail : hji@invesume.com</p>
 				</div>
 			</div>
 			
