Update Mute Button
- 내 음성 송출 음소거 기능 적용

--- a/views/index.html
+++ b/views/index.html
@@ -169,6 +169,11 @@
 					<span class="ripple" style="height: 56px; width: 56px; top: 13px; left: 13px;"></span>
 				</button>
 				
+				<!-- 볼륨 버튼 -->
+				<button class="btn btn--xl btn--teal btn--fab mdi md-volume-up buttonVolume" title="Audio toggle" style="position: relative; overflow: hidden; font-size: 1.9rem;">
+					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
+				</button>
+				
 				<!-- 채팅 open/close -->
 				<button class="btn btn--xl btn--blue btn--fab mdi md-chat chatBtn" title="채팅" style="position: relative; font-size: 1.9rem;">
 					<div class="msgCntDiv" style="display: none;">
