--- a/views/index.html
+++ b/views/index.html
@@ -72,7 +72,7 @@
 				
 				<div class="bottom_right">
 					<div class="box1">
-						<p>대화명, 그룹명을 입력하여<br> 화상통화를 참여하세요.</p>
+						<p>대화명, 그룹명을 입력하여<br> 영상통화를 참여하세요.</p>
 					</div>
 					
 					<div class="box3">
@@ -162,7 +162,7 @@
 				
 				<div class="menuLineDiv">
 					<!-- 종료 -->
-					<button class="btn btn--xl btn--red btn--fab mdi md-call-end" id="btn-leave-room" title="종료" style="position: relative; overflow: hidden; font-size: 1.9rem;">
+					<button class="btn btn--xl btn--red btn--fab mdi md-call-end" id="btn-leave-room" data-value="false" title="종료" style="position: relative; overflow: hidden; font-size: 1.9rem;">
 						<span class="ripple" style="height: 56px; width: 56px; top: 2px; left: 18.125px;"></span>
 					</button>
 					
