--- a/views/index.html
+++ b/views/index.html
@@ -211,7 +211,7 @@
 		<div id="chat-container" data-value="false">
 			
 			<!-- 파일공유 -->
-			<button class="btn btn--xl btn--purple btn--fab mdi md-file-upload" id="share-file" title="종료" style="position: relative; overflow: hidden; font-size: 1.9rem;">
+			<button class="btn btn--xl btn--purple btn--fab mdi md-file-upload" id="share-file" title="종료" disabled style="position: relative; overflow: hidden; font-size: 1.9rem;">
 				<span class="ripple" style="height: 56px; width: 56px; top: 2px; left: 18.125px;"></span>
 			</button>
 			
