Update Max Participants Allowed
- 기존 접속후 참가자수 체크에서 접속전 참가자 수 확인 으로 변경
- 현재 최대 4인 접속 가능하도록 설정
- 변경 방식은 Signaling-Server.js 의 customMaxParticipantsAllowed 값 변경

--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
 	
 	
-	<script src="/dist/RTCMultiConnection.min.js"></script>
+	<script src="/dist/RTCMultiConnection.js"></script>
 	<script src="/dev/adapter.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 
