--- a/views/member/join.ejs
+++ b/views/member/join.ejs
@@ -31,7 +31,7 @@
 
             <hr />
 
-            <div>Sign up with <a href=''>Facebook</a> or <a href=''>Naver</a> or <a href='https://localhost/login/kakao'>Kakao</a></div>
+            <div>Sign up with <a href='https://localhost/login/kakao'>kakao</a> or <a href=''>Naver</a> or <a href='https://localhost/login/kakao'>Kakao</a></div>
 
         </div>
 
