--- a/views/member/login.ejs
+++ b/views/member/login.ejs
@@ -95,7 +95,7 @@
             console.log("xmlHttpRequest.status of result : " + result);
 
             if (result.email) {
-                window.location.href="/main";
+                window.location.href="/";
             }
             else {
                 resultDiv.innerHTML = result;
