--- a/views/index.html
+++ b/views/index.html
@@ -72,7 +72,7 @@
 				
 				<div class="bottom_right">
 					<div class="box1">
-						<p>대화명, 그룹명을 입력하여<br> 영상통화를 참여하세요.</p>
+						<p>대화명, 그룹명을 입력하여<br> 영상통화를 참여하세요.<%= roomID %>!!!</p>
 					</div>
 					
 					<div class="box3">
