Update SNS 퍼블리싱 진행중..
- 로그인 입력창 퍼블리싱 완료
- kakao google 로그인 확인
- naver facebook 확인 필요
- 회원가입 입력창 퍼블리싱 진행중
- 회원가입시 메일 중복체크(X)

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -269,6 +269,23 @@ video {
 #room-id[disabled] , #userName[disabled] {
 	background-color: white;
 }
+
+.loginBtnDiv {
+	display: flex;
+	margin: 10px 0;
+}
+.loginBtnDiv div { 
+	max-width: 20%; 
+	overflow: hidden;
+	padding-left: 5px;
+	padding-right: 5px;
+	position: relative; 
+}
+.loginBtnDiv img { 
+	border-radius: 8px;
+	cursor: pointer;
+	width: 100%; 
+}
 /****** index css ******/
 
 
