--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -28,11 +28,11 @@ body > div { min-width: 360px; }
 
 .contentBody.row { display: block; }
 .contentBody .bottom_left {
+	background: linear-gradient( to right, #3a3a3a 10%, #3a3a3a, #AF87E8 );
 	box-sizing: border-box;
 	box-shadow: 8px 15px 30px #4b648c;
-	background: linear-gradient( to right, #3a3a3a 10%, #3a3a3a, #AF87E8 );
-	width: 100%;
 	border-radius: 15px;
+	width: 100%;
 }
 .contentBody .bottom_left img {
 	display: block;
@@ -44,7 +44,6 @@ body > div { min-width: 360px; }
 	padding: 15px 20px;
 }
 .bottom_left p {
-	color: #fff;
 	letter-spacing: -0.05em;
 	padding: 0 20px 15px 20px;
 }
@@ -54,35 +53,63 @@ body > div { min-width: 360px; }
 	font-size: 2em;
 }
 .bottom_left p {
+	color: #fff;
 	font-size: 1em;
 	line-height: 1.5em;
 }
 
 
 .bottom_right {
+	/* background-color: #AF87E8; */
+	background-color: white;
+	border-radius: 10px;
 	box-shadow: 8px 15px 30px #4b648c;
-	background: #fff;
+	color: #000;
+	min-height: 300px;
+	margin-top: 30px;
 	overflow: hidden;
+	padding: 0;
 	position: relative;
 	width: 100%;
-	height: 300px;
-	margin-top: 30px;
-	padding: 0;
-	border-radius: 10px;
 }
 
 .bottom_right .box1 {
-	width: 100%;
-	/* background: #AF87E8 url(/img/bo.png)240px 65px no-repeat; */
-	background: #AF87E8;
-	padding: 35px;
 	box-sizing: border-box;
+	padding: 10px 35px 0 35px;
+	width: 100%;
 }
 
 .bottom_right .box1 p {
-	color: #fff;
-	line-height: 1.5em;
-	margin-bottom: 0;
+	font-size: 1.3em;
+	font-weight: bold;
+	margin-bottom: 2px;
+}
+.bottom_right .box1 input {
+	margin-bottom: 5px;
+}
+.bottom_right .box1 .signup {
+	font-size: .75rem;
+	position: absolute;
+	right: 35px;
+	top: 20px;
+}
+
+.showResult {
+	color: red;
+	font-size: .85rem;
+	height: 20px;
+	margin-top: 2px;
+	text-align: center;
+	width: 100%;
+}
+
+.bottom_right .box2 {
+	padding: 0 10px 5px 10px;
+}
+.bottom_right .box2 b { 
+	display: block;
+	text-align: center;
+	font-size: .85rem;
 }
 
 .bottom_right .box3 { padding-top: 15px; }
@@ -124,14 +151,21 @@ body > div { min-width: 360px; }
 	margin: 0;
 	bottom: 0;
 }
-#joinBtn , #open-or-join-room {
-	background-color: #2BC1A4;
-	border-color: #2BC1A4;
+#joinBtn , .box1 .btn-login-local , .box1 .loginButton {
+	background-color: #af87e8;
+	border-color: #af87e8;
 	box-shadow: none;
-	padding: 15px;
+	color: white;
+	font-size: 1rem;
+	font-weight: bold;
+	padding: 5px;
 	width: 100%;
 }
 
+#joinBtn , .box1 .btn-login-local:hover , .box1 .loginButton:hover {
+	background-color: #2BC1A4;
+	border-color: #2BC1A4;
+}
 
 
 
