--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,7 @@
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> 
+	<script src="/js/jquery.cookie.js"></script> 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
 	
 	
@@ -70,7 +71,30 @@
 				
 				<div style="width: 1%;"></div>
 				
-				<div class="bottom_right"></div>
+				<div class="bottom_right">
+					<div class="box3">
+						<!-- <p>로그인을 하시면 보다 다양한 서비스를 이용하실 수 있습니다.</p> -->
+						<img alt="" src="/img/hamonia-logo.png">
+					</div>
+					
+					<div class="box1" style="padding-right: 25px;">
+						<!-- <p>Hamonia</p> -->
+						<div class='signup' style="position: static;">
+							<a href='javascript:;' id="openLoginDiv">로그인</a>
+							<span> / </span>
+							<a href='javascript:;' id="openSignupDiv">회원가입</a>
+						</div>
+					</div>
+					
+					<div class="box4">
+						<input type="text" id="room-id" class="form-control" placeholder="그룹명을 입력하세요." autocorrect=off autocapitalize=off size=20>
+					    <input type="text" id="userName" class="form-control" name="userName" required placeholder="대화명을 입력하세요." autocomplete="off">
+					</div>
+					
+					<div class="row joinBtn">
+						<button id="open-or-join-room" class="btn btn-primary btn-block">Join room!</button>
+					</div>
+				</div>
 		    </div>
 		    
 			<hr style="width: 100%; margin: 30px 0 ; border: 0;"/>
