--- a/views/member/join.ejs
+++ b/views/member/join.ejs
@@ -1,21 +1,69 @@
 <div class="box1">
 	<p>회원가입</p>
-    <form action="/join" method="post">
-        <label for="email" class="sr-only">Email</label>
-        <input type="email" name="email" class="form-control" placeholder="Email" required autofocus>
-
-        <label for="password" class="sr-only">Password</label>
-        <input type="password" name="password" class="form-control" placeholder="Password" required>
-
-        <!--<label for="inputPassword" class="sr-only">Password</label>-->
-        <!--<input type="password" name="password" class="form-control" placeholder="Password" required>-->
-
-        <button class="btn btn-lg btn-default btn-block loginButton">가입하기</button>
-    </form>
-
-    <div class="showResult"></div>
-
-    <hr />
-
-    <div>Sign up with <a href='https://localhost/login/kakao'>kakao</a> or <a href=''>Naver</a> or <a href='https://localhost/login/kakao'>Kakao</a></div>
+	
+	<div class='signup'>
+		<a id="notLoginDiv" href='javascript:;'>비회원</a>
+		<span> / </span>
+		<a id="loginDiv" href='javascript:;'>로그인</a>
+	</div>
+	
+	<form action="/join" method="post">
+	    <label for="email" class="sr-only">Email</label>
+	    <input type="email" name="email" class="form-control" placeholder="Email" required autofocus>
+	
+	    <label for="password" class="sr-only">Password</label>
+	    <input type="password" name="password" class="form-control" placeholder="Password" required>
+	
+	    <!--<label for="inputPassword" class="sr-only">Password</label>-->
+	    <!--<input type="password" name="password" class="form-control" placeholder="Password" required>-->
+	
+	    <button class="btn btn-lg btn-default btn-block loginButton">가입하기</button>
+	</form>
+	
+	<div class="showResult"></div>
 </div>
+	
+<!-- sosial -->
+<div class="box2">
+	<hr style=" margin-top:  8px; margin-bottom:  10px;">
+	
+	<b>SNS 계정으로 회원가입/로그인</b>
+	
+	<div class="loginBtnDiv">
+		
+		<div class="btn-login">
+			<img alt="kakao" src="/img/kakaolink_icon.png">
+		</div>
+		
+		<div class="btn-login">
+			<img alt="naver" src="/img/naver_icon.png">
+		</div>
+		
+		<div class="btn-login">
+			<img alt="google" src="/img/google+_icon.png">
+		</div>
+		
+		<div class="btn-login">
+			<img alt="facebook" src="/img/facebook-icon.png">
+		</div>
+		
+		<div class="btn-login">
+			<img alt="Hamonikr" src="/img/hamonikr-icon.png">
+		</div>
+	</div>
+</div>
+
+<script>
+// login button
+$('#loginDiv').click(function(){
+	$.ajax({
+		url : '/login',
+		success : function(data){
+			$('.bottom_right').empty().append(data);
+		},
+		error : function(request, status, error){
+			console.log('status : ' + status + '\nrequest : ' + request + '\nerror : ' + error);
+		}
+	});
+});
+</script>
