--- a/views/member/login.ejs
+++ b/views/member/login.ejs
@@ -10,13 +10,14 @@
 		<p>Hamonia</p>
 	
 		<div class='signup'>
-			<!-- <a href='/join'>회원가입</a> -->
-			<a href='javascript:;'>회원가입</a>
+			<a id="notLoginDiv" href='javascript:;'>비회원</a>
+			<span> / </span>
+			<a id="signupDiv" href='javascript:;'>회원가입</a>
 		</div>
 		
 		<form method="post">
     	    <label for="email" class="sr-only">Email</label>
-	        <input type="email" name="email" class="form-control" placeholder="Email" required>
+	        <input type="email" name="email" class="form-control" placeholder="Email" required autofocus>
 	        <label for="password" class="sr-only">Password</label>
 	        <input type="password" name="password" class="form-control" placeholder="Password" required>
 		    <button class="btn btn-lg btn-default btn-block btn-login-local">로그인</button>
@@ -31,7 +32,7 @@
 	<div class="box2">
 		<hr style=" margin-top:  8px; margin-bottom:  10px;">
 		
-		<b>다른 계정으로 로그인</b>
+		<b>SNS 계정으로 회원가입/로그인</b>
 		
 		<div class="loginBtnDiv">
 			
@@ -59,88 +60,86 @@
 <% } %>
 
 <script>
-	// signup button
-	$('.signup a').click(function(){
-		$.ajax({
-			url : 'join',
-			success : function(data){
-				$('.bottom_right').empty().append(data);
-			},
-			error : function(request, status, error){
-				console.log('status : ' + status + '\nrequest : ' + request + '\nerror : ' + error);
-			}
-		});
-	});
-	
-	// icon button
-	$('.btn-login img').click(function(){
-		if($(this).attr('alt') != 'Hamonikr') {
-			location.href='https://localhost/login/' + $(this).attr('alt');
-		} else {
-			alert('준비중');
+// signup button
+$('#signupDiv').click(function(){
+	$.ajax({
+		url : 'join',
+		success : function(data){
+			$('.bottom_right').empty().append(data);
+		},
+		error : function(request, status, error){
+			console.log('status : ' + status + '\nrequest : ' + request + '\nerror : ' + error);
 		}
 	});
+});
+
+// icon button
+$('.btn-login img').click(function(){
+	if($(this).attr('alt') != 'Hamonikr') {
+		location.href='https://localhost/login/' + $(this).attr('alt');
+	} else {
+		alert('준비중');
+	}
+});
+
+
+$('.btn-login-local').click(function(){
+	var email = document.getElementsByName('email')[0].value;
+	var password = document.getElementsByName('password')[0].value;
+	sendAjax('https://localhost/login', email, password);
+	return false;
+});
 	
-	
-	$('.btn-login-local').click(function(){
-		var email = document.getElementsByName('email')[0].value;
-		var password = document.getElementsByName('password')[0].value;
-		sendAjax('https://localhost/login', email, password);
-		return false;
-	});
-	
-//    document.querySelector('.btn-login-kakao').addEventListener('click', function() {
-//        sendKakaoAjax('https://localhost/login/kakao');
-//    });
+//	document.querySelector('.btn-login-kakao').addEventListener('click', function() {
+//		sendKakaoAjax('https://localhost/login/kakao');
+//	});
 
-    function sendKakaoAjax(url) {
-        console.log("sendKakaoAjax : " + url);
-        
-        $.ajax({
-            type: 'post',
-            url: url,
-            success: function (args) {
-                console.log("success");
-            },
-            error: function (err) {
-                console.log("error", err);
-            }
-        });
-    }
+function sendKakaoAjax(url) {
+    console.log("sendKakaoAjax : " + url);
+    
+    $.ajax({
+        type: 'post',
+        url: url,
+        success: function (args) {
+            console.log("success");
+        },
+        error: function (err) {
+            console.log("error", err);
+        }
+    });
+}
 
 
-    // Ajax로 전달
-    function sendAjax(url, email, password) {
-        var data = { 'email' : email, 'password' : password };
+// Ajax로 전달
+function sendAjax(url, email, password) {
+    var data = { 'email' : email, 'password' : password };
 
-        data = JSON.stringify(data);
-        var xmlHttpRequest = new XMLHttpRequest();
-        xmlHttpRequest.open('POST', url); // POST로 보냄
-        xmlHttpRequest.setRequestHeader('Content-Type', 'application/json');
-        xmlHttpRequest.send(data);
+    data = JSON.stringify(data);
+    var xmlHttpRequest = new XMLHttpRequest();
+    xmlHttpRequest.open('POST', url); // POST로 보냄
+    xmlHttpRequest.setRequestHeader('Content-Type', 'application/json');
+    xmlHttpRequest.send(data);
 
-        xmlHttpRequest.addEventListener('load', function() {
-            var result = JSON.parse(xmlHttpRequest.responseText);
-            var resultDiv = document.querySelector(".showResult");
-			var reText = '';
-			
-			resultDiv.innerHTML = reText;
-			
-            console.log("xmlHttpRequest.status : " + xmlHttpRequest.status);
-            console.log("xmlHttpRequest.status of result : " + result);
+    xmlHttpRequest.addEventListener('load', function() {
+        var result = JSON.parse(xmlHttpRequest.responseText);
+        var resultDiv = document.querySelector(".showResult");
+		var reText = '';
+		
+		resultDiv.innerHTML = reText;
+		
+        console.log("xmlHttpRequest.status : " + xmlHttpRequest.status);
+        console.log("xmlHttpRequest.status of result : " + result);
 
-            if (result.email) {
-                window.location.href="/";
-            }
-            else {
-            	if(result == "Missing credentials") reText = "유효한 입력이 아닙니다.";
-            	if(result == "Your login info is not found") reText = "로그인 정보를 찾을 수 없습니다.";
-            	if(result == "Your password is incorrect") reText = "비밀번호가 일치하지 않습니다.";
-            	resultDiv.innerHTML = reText;
-                if(reText == '') resultDiv.innerHTML = result;
-            }
-        });
-
-    }
-
+        if (result.email) {
+            window.location.href="/";
+        }
+        else {
+        	if(result == "Missing credentials") reText = "유효한 입력이 아닙니다.";
+        	if(result == "Your login info is not found") reText = "로그인 정보를 찾을 수 없습니다.";
+        	if(result == "Your password is incorrect") reText = "비밀번호가 일치하지 않습니다.";
+        	resultDiv.innerHTML = reText;
+            if(reText == '') resultDiv.innerHTML = result;
+        }
+    });
+}
 </script>
