Update SNS 퍼블리싱 진행중
- 초대 URL 을 통한 접속시 로그인한 후에도 유지되도록 적용
- 로그인 유무에 따른 UX/UI 변경
- 사용자가 로그인한 경우 정보를 보여주도록 진행중(닉네임)

--- a/views/member/login.ejs
+++ b/views/member/login.ejs
@@ -1,8 +1,4 @@
-<% if (isLogin) { %>
-	<!-- login -->
-	<a class="mdl-navigation__link mdl-typography--text-uppercase" href="/logout">LOGOUT</a>
-
-<% } else { %>
+<% if (!isLogin) { %>
 	<!-- not login -->
 	<!--<a class="mdl-navigation__link mdl-typography--text-uppercase" href="/login">LOGIN</a>-->
 	
