--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -28,11 +28,11 @@ body > div { min-width: 360px; }
 
 .contentBody.row { display: block; }
 .contentBody .bottom_left {
+	background: linear-gradient( to right, #3a3a3a 10%, #3a3a3a, #AF87E8 );
 	box-sizing: border-box;
 	box-shadow: 8px 15px 30px #4b648c;
-	background: linear-gradient( to right, #3a3a3a 10%, #3a3a3a, #AF87E8 );
-	width: 100%;
 	border-radius: 15px;
+	width: 100%;
 }
 .contentBody .bottom_left img {
 	display: block;
@@ -44,7 +44,6 @@ body > div { min-width: 360px; }
 	padding: 15px 20px;
 }
 .bottom_left p {
-	color: #fff;
 	letter-spacing: -0.05em;
 	padding: 0 20px 15px 20px;
 }
@@ -54,43 +53,83 @@ body > div { min-width: 360px; }
 	font-size: 2em;
 }
 .bottom_left p {
+	color: #fff;
 	font-size: 1em;
 	line-height: 1.5em;
 }
 
 
 .bottom_right {
+	/* background-color: #AF87E8; */
+	background-color: white;
+	border-radius: 10px;
 	box-shadow: 8px 15px 30px #4b648c;
-	background: #fff;
+	color: #000;
+	min-height: 300px;
+	margin-top: 30px;
 	overflow: hidden;
+	padding: 0;
 	position: relative;
 	width: 100%;
-	height: 300px;
-	margin-top: 30px;
-	padding: 0;
-	border-radius: 10px;
 }
 
 .bottom_right .box1 {
-	width: 100%;
-	/* background: #AF87E8 url(/img/bo.png)240px 65px no-repeat; */
-	background: #AF87E8;
-	padding: 35px;
 	box-sizing: border-box;
+	padding: 10px 35px 0 35px;
+	width: 100%;
 }
 
 .bottom_right .box1 p {
-	color: #fff;
-	line-height: 1.5em;
-	margin-bottom: 0;
+	font-size: 1.3em;
+	font-weight: bold;
+	margin-bottom: 2px;
+}
+.bottom_right .box1 input {
+	margin-bottom: 5px;
+}
+.bottom_right .box1 .signup {
+	font-size: .75rem;
+	position: absolute;
+	right: 35px;
+	text-align: right;
+	top: 20px;
 }
 
-.bottom_right .box3 { padding-top: 15px; }
-.bottom_right .box3 , .bottom_right .box4 { 
-	padding-left: 15px; 
-	padding-right: 15px; 
+.showResult {
+	color: red;
+	font-size: .85rem;
+	height: 20px;
+	margin-top: 2px;
+	text-align: center;
+	width: 100%;
 }
 
+.bottom_right .box2 {
+	padding: 0 15px 5px 15px;
+}
+.bottom_right .box2 b { 
+	display: block;
+	text-align: center;
+	font-size: .85rem;
+}
+
+.bottom_right .box3 { 
+	font-size: .85rem;
+	padding: 15px 35px 0 35px;
+	text-align: center; 
+}
+.bottom_right .box4 {
+	padding-left: 25px; 
+	padding-right: 25px; 
+}
+
+.bottom_right .box3 img { 
+	margin-bottom: 30px;
+	margin-top: 15px;
+	width: 85px; 
+}
+
+/* 
 .bottom_right .box3 input , 
 .bottom_right .box4 input {
 	border: 0 none;
@@ -99,13 +138,10 @@ body > div { min-width: 360px; }
 	color: #999;
 	width: 100%;
 }
+*/
 
-.bottom_right .box4 button {
-	padding-left: 10px;
-	width: 10%;
-	height: 50px;
-	border: 0 none;
-	background: url(../img/w.jpg)5px 6px no-repeat;
+.bottom_right .box4 input {
+	margin-bottom: 5px;
 }
 
 .bottom_right label { display: none; }
@@ -119,19 +155,28 @@ body > div { min-width: 360px; }
 	
 }
 .bottom_right .joinBtn {
+	bottom: 0;
+	margin: 0;
 	position: absolute;
 	width: 100%;
-	margin: 0;
-	bottom: 0;
 }
-#joinBtn , #open-or-join-room {
-	background-color: #2BC1A4;
-	border-color: #2BC1A4;
+#joinBtn , #openNotLoginDiv , #open-or-join-room , .box1 .btn-login-local , .box1 .loginButton {
+	background-color: #af87e8;
+	border-color: #af87e8;
 	box-shadow: none;
-	padding: 15px;
+	color: white;
+	font-size: 1rem;
+	font-weight: bold;
+	padding: 5px;
 	width: 100%;
 }
 
+#joinBtn , #openNotLoginDiv:hover , #open-or-join-room:hover , .box1 .btn-login-local:hover , .box1 .loginButton:hover {
+	background-color: #2BC1A4;
+	border-color: #2BC1A4;
+}
+
+#open-or-join-room { padding: 1rem; }
 
 
 
