--- a/views/member/bottom_right_main.ejs
+++ b/views/member/bottom_right_main.ejs
@@ -22,7 +22,7 @@
 
 
 <div class="box4">
-	<input type="text" id="room-id" class="form-control" placeholder="그룹명을 입력하세요." autocorrect=off autocapitalize=off size=20>
+	<input type="text" id="room-id" class="form-control" placeholder="방이름을 입력하세요." autocorrect=off autocapitalize=off size=20>
 	
 	<% if (isLogin){ %>
 		<!--<%=auth_type%>:-->
