--- a/views/member/login.ejs
+++ b/views/member/login.ejs
@@ -28,7 +28,7 @@
 	<div class="box2">
 		<hr style=" margin-top:  8px; margin-bottom:  10px;">
 		
-		<b>SNS 계정으로 회원가입/로그인</b>
+		<b>SNS 계정으로 로그인</b>
 		
 		<div class="loginBtnDiv">
 			
