--- a/views/member/join.ejs
+++ b/views/member/join.ejs
@@ -27,7 +27,7 @@
 <div class="box2">
 	<hr style=" margin-top:  8px; margin-bottom:  10px;">
 	
-	<b>SNS 계정으로 회원가입/로그인</b>
+	<b>SNS 계정으로 회원가입</b>
 	
 	<div class="loginBtnDiv">
 		
