Update SNS Login
- Hamonikr Login 적용 확인
- first.ejs 페이지를 bottom_right_main.ejs 으로 변경

--- a/views/member/bottom_right_main.ejs
+++ b/views/member/bottom_right_main.ejs
@@ -33,7 +33,7 @@
 </div>
 
 <div class="row joinBtn">
-	<button id="open-or-join-room" class="btn btn-primary btn-block">Join room!</button>
+	<button id="open-or-join-room" class="btn btn-primary btn-block">접속하기</button>
 </div>
 
 <script>
