--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,6 +45,17 @@
 	<link rel="stylesheet" href="/dev/getHTMLMediaElement.css">
 	<script src="/dev/getHTMLMediaElement.js"></script>
 	<script src="/dev/FileBufferReader.js"></script>
+	
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119868541-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'UA-119868541-1');
+	</script>
 </head>
 
 <script type="text/javascript">
@@ -58,6 +69,7 @@
 		}
 	}
 </script>
+
 
 <body id="page-top">
 	
